kubernetes/demo/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  rules:
  - host: dashboard.com # change this in your hosts file
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 80

# to make it work locally
# sudo vim /etc/hosts
# ADDRESS of kubectl get ingress -n namespace --watch
# add a line
# 192.168.64.5    dashboard.com
